修正 jdk1.8 中不支持的语法